Fixed white space issue at bottom of document

--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ h1 {
 /*MAIN CONTENT*/
 #content {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
